# tubular_toolpath_creator

./: .gitignore  CMakeLists.txt  Pipfile  README.md  center_line.vtp  coil_mesh.stl  coil_out.stl  package.xml  pyvista_load.py  setup.py  workspace.code-workspace
archive/: coil_full.vtp  vmtk_example.py
data/: Coil2_centerline.vtp
data/original/: original_coil.ply  original_coil.stl  results_mesh.ply
data/thesis_exports/debug01/: left_mesh.vtp  right_mesh.vtp
data/thesis_exports/debug01/combined_rotation_segment/: combined_rotation_segment_degree_110.vtp  combined_rotation_segment_degree_130.vtp  combined_rotation_segment_degree_150.vtp  combined_rotation_segment_degree_30.vtp  combined_rotation_segment_degree_50.vtp  combined_rotation_segment_degree_70.vtp  combined_rotation_segment_degree_90.vtp
data/thesis_exports/debug01/debug_poses/: tubular_toolpath_x.vtp  (+2 more)
data/tmp/: centerline.vtp  clipped_coil.vtp  mesh_segment0.vtp  mesh_segment1.vtp  mesh_segment2.vtp  mesh_segment3.vtp  mesh_segment4.vtp  mesh_segment5.vtp  watertight_coil.stl
include/tubular_toolpath_creator/: debug_lines.py  debug_visualisation.py  gap_filter.py  tubular_toolpath_server.py  utils.py
include/tubular_toolpath_creator/conda/: bla.cpp  centerine.py  toolpath_centerline.bash  toolpath_centerline.py  vmtkcenterlines.py
launch/: debug.launch  test.launch  tubular_toolpath_creator.launch
src/: gap_filter.py  open3d_clean_mesh.py  test.zsh  toolpath_creator.py  tubular_toolpath_node.py  tubular_toolpath_server.py  utils.py  vtk_unkown.py
srv/: GenerateTubularToolpath.srv
(+16 files in other folders)
