<?xml version="1.0"?>
<package format="2">
  <name>tubular_toolpath_creator</name>
  <version>1.0.0</version>
  <description>The tubular_toolpath_creator package</description>

   <author email="Johannes.Biermann@Tutanota.com">Johannes Biermann</author>
  <maintainer email="Johannes.Biermann@Tutanota.com">Johannes Biermann</maintainer>

   <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- <exec_depend>rospy</exec_depend> -->
  <exec_depend>python-vtk</exec_depend>
  <exec_depend>pyvista</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python-open3d-pip</exec_depend>
  <build_depend>std_msgs</build_depend> 
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
